--- a/public/style.css
+++ b/public/style.css
@@ -78,18 +78,6 @@ h1, h2, h3 {
 }
 
 
-.button--cta {
-  background: #00e676;
-  color: white;
-  text-shadow: 0 0 2px #00c853;
-}
-
-.button--cta:hover, .button--cta:focus {
-  background: #69f0ae;
-  color: white;
-  text-shadow: 0 0 2px #00e676;
-}
-
 .button--danger {
   background: #E53935;
   color: white;
@@ -103,10 +91,24 @@ h1, h2, h3 {
 
 .button--raised {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
+  background: white;
 }
 
 .button--raised:hover, .button--raised:focus {
   box-shadow: 0 3px 8px 0 rgba(0,0,0,.15);
+}
+
+
+.button--cta {
+  background: #00e676;
+  color: white;
+  text-shadow: 0 0 2px #00c853;
+}
+
+.button--cta:hover, .button--cta:focus {
+  background: #69f0ae;
+  color: white;
+  text-shadow: 0 0 2px #00e676;
 }
 
 
@@ -139,13 +141,19 @@ h1, h2, h3 {
 }
 
 
-
 .button-link {
   color: #1976d2;
   font-weight: bold;
   cursor: pointer;
   padding: 5px;
   margin: -5px;
+}
+
+
+.centered-button-container {
+  margin: auto;
+  text-align: center;
+  padding: 10px 0;
 }
 
 
@@ -2197,6 +2205,11 @@ h1, h2, h3 {
   margin: 10px 0;
 }
 
+.form__text {
+  font-size: 14px;
+  color: #424242;
+}
+
 .form__draft {
   display: none;
   font-size: 12px;
@@ -2569,23 +2582,4 @@ font-weight: bold;
 .back-button-container {
   text-align: center;
   margin: 30px 0 50px;
-}
-
-
-
-
-.add-to-favorite-mobile-shortcut {
-  margin: auto;
-  text-align: center;
-  padding: 10px 0;
-}
-
-@media (min-width: 1025px) {
-  .add-to-favorite-mobile-shortcut {
-    display: none;
-  }
-}
-
-.add-to-favorite-mobile-shortcut__element {
-  background: white;
 }
