--- a/public/style.css
+++ b/public/style.css
@@ -887,6 +887,170 @@ h1, h2, h3 {
 /* FORUM */
 
 .liste-topics {
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  background: white;
+  display: table;
+  width: 100%;
+  margin: 10px 0;
+}
+
+@media (min-width: 1025px) {
+  .liste-topics {
+    border-radius: 2px;
+  }
+}
+
+.topic {
+  display: table-row;
+  font-size: 14px;
+  color: #1976D2;
+}
+
+@media (min-width: 1025px) {
+  .topic {
+    font-size: 16px;
+  }
+}
+
+.topic--new-messages {
+  color: #03A9F4;
+}
+
+.topic--visited {
+  color: #757575;
+  font-size: 13px;
+}
+
+@media (min-width: 1025px) {
+  .topic--visited {
+    font-size: 14px;
+  }
+}
+
+.topic--small {
+  font-size: 13px;
+}
+
+@media (min-width: 1025px) {
+  .topic--small {
+    font-size: 14px;
+  }
+}
+
+.topic:nth-child(even) {
+  background: hsl(207, 90%, 98%);
+}
+
+.topic:hover {
+  background: #E3F2FD;
+}
+
+.topic__label-container {
+  display: table-cell;
+  vertical-align: middle;
+  height: 44px;
+  width: 24px;
+}
+
+@media (min-width: 1025px) {
+  .topic__label-container {
+    width: 36px;
+  }
+}
+
+.topic--visited .topic__label-container {
+  height: 40px;
+}
+
+.topic__label {
+  width: 8px;
+  height: 8px;
+  border-radius: 2px;
+  margin-left: 8px;
+  background: red;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+
+@media (min-width: 1025px) {
+  .topic__label {
+    width: 12px;
+    height: 12px;
+  }
+}
+
+.topic__label--dossier1 {
+  background: #eeff41;
+}
+.topic__label--dossier2 {
+  background: #FF6F00;
+}
+.topic__label--lock {
+  background: #4e342e;
+}
+.topic__label--marque-on {
+  background: #2E7D32;
+}
+.topic__label--marque-off {
+  background: #B71C1C;
+}
+.topic__label--resolu {
+  background: #00E676;
+}
+.topic__label--ghost {
+  background: #757575;
+}
+
+.topic__text-container {
+  display: table-cell;
+  word-break: break-all;
+  word-break: break-word;
+  padding: 3px 0;
+  vertical-align: middle;
+}
+
+.topic--visited .topic__text-container {
+  padding: 1px 0;
+}
+
+.topic__title {
+  font-weight: bold;
+}
+
+.topic__infos {
+  font-size: 11px;
+  padding: 1px 0 2px;
+}
+
+@media (min-width: 1025px) {
+  .topic__infos {
+    font-size: 12px;
+  }
+}
+
+.topic--visited .topic__infos {
+  padding: 0;
+}
+
+.topic__date-and-nb-answers-container {
+  display: inline-block;
+  min-width: 110px;
+}
+
+.topic__date {
+  display: inline-block;
+  min-width: 60px;
+}
+
+.topic__nb-answers {
+  display: inline-block;
+  font-weight: bold;
+}
+
+.topic__author {
+  display: inline-block;
+}
+
+/*.liste-topics {
   width: 100%;
   padding: 0 8px;
   margin: 10px 0;
@@ -973,34 +1137,6 @@ h1, h2, h3 {
   .topic__label {
     width: 5px;
   }
-}
-
-.topic__label--dossier1 {
-  background: #eeff41;
-}
-
-.topic__label--dossier2 {
-  background: #FF6F00;
-}
-
-.topic__label--lock {
-  background: #4e342e;
-}
-
-.topic__label--marque-on {
-  background: #2E7D32;
-}
-
-.topic__label--marque-off {
-  background: #B71C1C;
-}
-
-.topic__label--resolu {
-  background: #00E676;
-}
-
-.topic__label--ghost {
-  background: #757575;
 }
 
 .topic__main-info {
@@ -1119,7 +1255,7 @@ h1, h2, h3 {
 
 .topic__date {
   font-size: 90%;
-}
+}*/
 
 /* FORUM - Topic ignoré */
 
