--- a/public/style.css
+++ b/public/style.css
@@ -902,14 +902,7 @@ h1, h2, h3 {
 
 .topic {
   display: table-row;
-  font-size: 14px;
   color: #1976D2;
-}
-
-@media (min-width: 1025px) {
-  .topic {
-    font-size: 16px;
-  }
 }
 
 .topic--new-messages {
@@ -955,11 +948,18 @@ h1, h2, h3 {
 @media (min-width: 1025px) {
   .topic__label-container {
     width: 30px;
+    height: 32px;
   }
 }
 
 .topic--visited .topic__label-container {
   height: 40px;
+}
+
+@media (min-width: 1025px) {
+  .topic--visited .topic__label-container {
+    height: 28px;
+  }
 }
 
 .topic__label {
@@ -1012,11 +1012,18 @@ h1, h2, h3 {
   vertical-align: middle;
 }
 
+@media (min-width: 1025px) {
+  .topic__text-container {
+    display: none;
+  }
+}
+
 .topic--visited .topic__text-container {
   padding: 1px 0;
 }
 
 .topic__title {
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -1025,12 +1032,6 @@ h1, h2, h3 {
   padding: 1px 0 2px;
   display: table;
   width: 100%;
-}
-
-@media (min-width: 1025px) {
-  .topic__infos {
-    font-size: 12px;
-  }
 }
 
 .topic--visited .topic__infos {
@@ -1047,12 +1048,6 @@ h1, h2, h3 {
   padding-right: 8px;
 }
 
-@media (min-width: 1025px) {
-  .topic__date-and-nb-answers-container {
-    padding-right: 10px;
-  }
-}
-
 .topic__date {
   display: inline-block;
   font-weight: bold;
@@ -1061,6 +1056,40 @@ h1, h2, h3 {
 .topic__nb-answers {
   display: inline-block;
   margin-right: 5px;
+}
+
+.topic__title--desktop,
+.topic__author--desktop,
+.topic__nb-answers--desktop,
+.topic__date--desktop {
+  display: none;
+}
+
+@media (min-width: 1025px) {
+  .topic__title--desktop {
+    display: table-cell;
+    vertical-align: middle;
+    width: 60%;
+    word-break: break-all;
+    word-break: break-word;
+    font-size: 15px;
+  }
+
+  .topic__author--desktop, .topic__nb-answers--desktop, .topic__date--desktop {
+    display: table-cell;
+    font-size: 12px;
+    vertical-align: middle;
+    text-align: center;
+  }
+
+  .topic__nb-answers {
+    margin-right: 0;
+  }
+
+  .topic__date {
+    text-align: center;
+    font-weight: normal;
+  }
 }
 
 /* FORUM - Topic ignoré */
