--- a/public/style.css
+++ b/public/style.css
@@ -2500,23 +2500,17 @@ font-weight: bold;
 
 .profile-avatar {
   display: block;
-  width: 100%;
-  max-width: 600px;
-  height: 300px;
-  margin: 0 auto 12px;
+  max-height: 600px;
+  max-width: 100%;
+  margin: 10px auto 12px;
   background: #bdbdbd;
   background-image: -webkit-radial-gradient(#e0e0e0, #bdbdbd);
   background-image:         radial-gradient(#e0e0e0, #bdbdbd);
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
 }
 
-.profile-avatar--loaded {
-  height: auto;
-}
-
 @media (min-width: 640px) {
   .profile-avatar {
-    margin-top: 10px;
     box-shadow: 0 1px 2px rgba(0,0,0,.2);
   }
 }
