--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -7,28 +7,22 @@
   text-transform: uppercase;
   font-size: 14.4px;
   -webkit-tap-highlight-color: transparent;
-  -webkit-transition: all .1s ease-out;
-          transition: all .1s ease-out;
   -webkit-appearance: none; /* text input */
   border: none; /* text input */
   background: transparent; /* text input */
   outline: none;
 
-  color: #2196f3;
-}
-
-.button:hover {
-  color: #64b5f6;
+  color: hsl(166, 100%, 70%);
 }
 
 
 .button--raised {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
-  background: white;
+  box-shadow: 0 2px 5px rgba(0,0,0,.1);
+  background: hsl(0, 0%, 20%);
 }
 
-.button--raised:hover, .button--raised:focus {
-  box-shadow: 0 3px 8px 0 rgba(0,0,0,.15);
+.button--raised:active {
+  box-shadow: inset 0 2px 5px rgba(0,0,0,.5);
 }
 
 
@@ -43,16 +37,24 @@
 }
 
 
-.button--cta {
-  background: #00e676;
-  color: white;
-  text-shadow: 0 0 2px #00c853;
+
+.button--lighter {
+  background: hsl(0, 0%, 40%);
 }
 
-.button--cta:hover, .button--cta:focus {
-  background: #69f0ae;
+
+.button--cta {
+  background: hsl(255, 100%, 60%);
   color: white;
-  text-shadow: 0 0 2px #00e676;
+}
+
+.button--cta:hover {
+  color: white;
+}
+
+.button--cta:active {
+  background: hsl(255, 100%, 55%);
+  color: white;
 }
 
 
@@ -86,7 +88,7 @@
 
 
 .button-link {
-  color: #1976d2;
+  color: hsl(166, 100%, 70%);
   font-weight: bold;
   cursor: pointer;
   padding: 5px;
