--- a/public/styles/card.css
+++ b/public/styles/card.css
@@ -1,9 +1,8 @@
 .card {
-  background: white;
+  background: hsla(0, 0%, 100%, .2);
   margin: 10px 8px;
   position: relative;
   border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
   padding: 10px;
   word-wrap: break-word;
 }
@@ -16,8 +15,7 @@
 }
 
 .card__header {
-  color: #9E9E9E;
-  color: rgba(0,0,0,.38);
+  color: hsla(0, 0%, 100%, .4);
   padding: 0 0 5px;
   text-transform: uppercase;
   font-weight: bold;
