--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -1,9 +1,7 @@
 .form {
   width: 100%;
-  background: #E0E0E0;
+  background: hsl(0, 0%, 20%);
   padding: 8px;
-  border: 0 solid #bdbdbd;
-  border-width: 1px 0;
   position: relative;
   z-index: 1; /* For FAB */
 }
@@ -14,9 +12,7 @@
 
 @media (min-width: 1025px) {
   .form {
-    border-width: 1px;
     border-radius: 4px;
-    box-shadow: 0 1px 4px rgba(0,0,0,.2)
   }
 }
 
@@ -25,7 +21,7 @@
 }
 
 .form__text {
-  color: #424242;
+  color: hsl(0, 0%, 87%);
 }
 
 .form__choice {
@@ -89,25 +85,26 @@
   -webkit-appearance: none;
   font: 14px/1.4 -apple-system, sans-serif;
   width: 100%;
-  border: 1px solid #c7c7cc;
-  padding: 2px;
+  border: 2px solid;
+  border-color: hsl(255, 100%, 55%) hsl(255, 100%, 62%) hsl(255, 100%, 65%);
+  padding: 4px 6px;
   outline: none;
+  border-radius: 4px;
+  background: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 87%);
 }
 
 .form__topic {
   margin-bottom: .5em;
-  border-radius: 3px;
 }
 
 .form__textarea {
   resize: vertical;
-  height: 142px;
-  border-radius: 5px;
+  height: 143px;
 }
 
 .form__topic:focus, .form__textarea:focus {
-  border-color: #bdbdbd;
-  box-shadow: inset 0 2px 5px 0 rgba(0,0,0,.1);
+border-color: hsl(255, 100%, 60%) hsl(255, 100%, 67%) hsl(255, 100%, 70%);
 }
 
 @media (min-width: 1025px) {
