--- a/public/styles/forum.css
+++ b/public/styles/forum.css
@@ -61,8 +61,7 @@
 /* Topic list */
 
 .liste-topics {
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
-  background: white;
+  background: hsl(0, 0%, 13%);
   display: table;
   width: 100%;
   margin: 10px 0;
@@ -76,35 +75,29 @@
 
 .topic {
   display: table-row;
-  color: #1976D2;
+  color: hsl(166, 100%, 70%);
 }
 
 .topic__new-messages-indicator {
-  background: #64FFDA;
+  background: hsl(190, 80%, 58%);
+  box-shadow: 0 0 3px 1px hsla(0, 100%, 100%, .5);
   display: inline-block;
-  width: 9px;
-  height: 9px;
+  width: 7px;
+  height: 7px;
   border-radius: 99px;
-  margin-right: 1px;
+  margin-right: 2px;
+  margin-bottom: 1px;
 }
 
 @media (min-width: 1025px) {
   .topic__new-messages-indicator {
-    width: 9px;
-    height: 9px;
+    width: 8px;
+    height: 8px;
   }
 }
 
 .topic--visited {
-  color: #757575;
-}
-
-.topic:nth-child(even) {
-  background: hsl(207, 90%, 98%);
-}
-
-.topic:hover {
-  background: #E3F2FD;
+  color: hsl(0, 0%, 50%);
 }
 
 .topic__label {
