--- a/public/styles/mobile-menu.css
+++ b/public/styles/mobile-menu.css
@@ -31,9 +31,8 @@
 }
 
 .mobile-menu--opened .mobile-menu__opener-icon {
-  background-color: white;
+  background-color: hsl(0, 0%, 20%);
   border-radius: 3px;
-  box-shadow: 0 2px 10px rgba(0,0,0,.5);
 }
 
 .mobile-menu__items {
@@ -42,8 +41,8 @@
   width: 200px;
   right: 5px;
   top: 40px;
-  background: white;
-  box-shadow: 0 2px 10px rgba(0,0,0,.5);
+  background: hsl(0, 0%, 20%);
+  box-shadow: 0 2px 20px rgba(0,0,0,.5);
   border-radius: 2px;
   z-index: 1;
 }
@@ -55,7 +54,7 @@
 .mobile-menu__item {
   font-size: 16px;
   font-weight: normal;
-  color: #212121;
+  color: hsl(0, 0%, 87%);
   display: block;
   padding: 10px 12px;
   cursor: pointer;
