--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -6,8 +6,8 @@
   margin-top: -5px;
   font-size: 16px;
   font-weight: bold;
-  background: #90CAF9;
-  box-shadow: inset 0 -2px 3px rgba(0,0,0,.1);
+  background: hsl(214, 27%, 25%);
+  box-shadow: inset 0 -3px 3px rgba(0,0,0,.2);
 }
 
 @media (min-width: 1025px) {
@@ -24,7 +24,7 @@
 }
 
 .header__home-link {
-  color: hsla(216,85%,30%,1);
+  color: hsl(214, 27%, 65%);
   padding: 10px 20px;
   display: inline-block;
 }
@@ -36,13 +36,13 @@
 .header__forum-cell {
   display: table-cell;
   text-transform: none;
-  background: #BBDEFB;
-  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08), inset 1px 0 1px rgba(255,255,255,.2);
+  background: hsl(214, 27%, 35%);
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08);
   white-space: nowrap;
 }
 
 .header__forum-link {
-  color: #1565C0;
+  color: hsl(214, 27%, 75%);
   padding: 10px 20px;
   display: inline-block;
 }
@@ -57,7 +57,7 @@
 /* SHEET */
 
 .sheet {
-  background: #ECEFF1;
+  background: black;
   padding: 5px 0 10px;
   position: relative;
   overflow: hidden;
@@ -76,7 +76,6 @@
   .sheet {
     margin: auto;
     max-width: 1400px;
-    box-shadow: 0 0 100px rgba(0,0,0,.5);
     padding: 10px 30px;
     min-height: 100%;
   }
@@ -89,29 +88,6 @@
     border-width: 0;
     padding-top: 0;
     margin-top: 15px;
-  }
-}
-
-.sheet-title {
-  padding: 0 10px;
-  margin: 5px 0 10px;
-  word-wrap: break-word;
-}
-
-@media (min-width: 1025px) {
-  .sheet-title {
-    padding: 0;
-    margin: 5px -10px 10px;
-  }
-}
-
-.sheet-title a {
-  color: #333;
-}
-
-@media (min-width: 1025px) {
-  .sheet-title a {
-    padding: 10px;
   }
 }
 
@@ -139,7 +115,6 @@
 .page-title {
   font-size: 21px;
   margin: 10px 8px 0;
-  text-shadow: 0 1px 0 white;
   position: relative;
   word-wrap: break-word;
 }
@@ -176,11 +151,12 @@
   display: inline-block;
   padding: 10px;
   margin: -10px;
-  color: #455A64;
+  color: #AED257;
 }
 
+.page-title__link,
 .page-title--topic {
-  color: #455A64;
+  color: hsl(111, 90%, 44%);
 }
 
 /* ASIDE */
@@ -242,7 +218,7 @@
   text-align: center;
   overflow: hidden;
   white-space: nowrap;
-  color: #424242;
+  color: hsl(0, 0%, 73%);
 }
 
 .aside__menu {
