--- a/public/styles/topic.css
+++ b/public/styles/topic.css
@@ -72,19 +72,19 @@
 }
 
 .pagination-topic__page-link:hover {
-  background: rgba(255,87,34,.1); /* 500 */
+  background: hsla(194, 100%, 43%, .2);
 }
 
 .pagination-topic__page-link--active {
-  background: #ff5722;
-  color: white;
+  background: hsl(180, 100%, 58%);
+  color: hsl(0, 0%, 20%);
   font-weight: bold;
   margin: 0;
   padding: 0 2px;
 }
 
 .pagination-topic__page-link--active:hover {
-  background: #ff5722;
+  background: hsl(180, 100%, 58%);
 }
 
 .pagination-topic--top .pagination-topic__page-link--last,
@@ -132,7 +132,7 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
-  padding: 10px;
+  padding: 7px 10px;
   font-size: 14.4px;
   letter-spacing: .5px;
   font-weight: bold;
@@ -144,19 +144,12 @@
 }
 
 .fab-post__inner {
-  background: hsl(198, 100%, 80%); /* Light Blue A100 is 75%, too eye-catching */
-  text-shadow: 0 0 2px #80D8FF;
+  background: hsl(255, 100%, 60%);
   border-radius: 3px;
   box-shadow: 0 2px 5px rgba(0,0,0,.1);
-  padding: 5px 10px;
+  padding: 8px 13px;
   -webkit-transition: all .1s ease-out;
           transition: all .1s ease-out;
-}
-
-.fab-post:hover .fab-post__inner {
-  background: hsl(198, 100%, 87.5%); /* 75% by default */
-  text-shadow: 0 0 2px hsl(198, 100%, 80%);
-  box-shadow: 0 3px 8px 0 rgba(0,0,0,.15)
 }
 
 @media (min-width: 1025px) {
