Rename files for cache

--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -197,11 +197,11 @@
 }
 
 .aside__top-button--open-jeuxvideocom {
-  background-image: url(/images/open-jeuxvideocom.svg);
+  background-image: url(/images/open-jeuxvideocom.2.svg);
 }
 
 .aside__top-button--favorite {
-  background-image: url(/images/add-to-favorites.svg);
+  background-image: url(/images/add-to-favorites.2.svg);
 }
 
 .aside__top-button--unfavorite {
