--- a/public/styles/forum.css
+++ b/public/styles/forum.css
@@ -19,14 +19,14 @@
 .pagination-forum .precedent a.debut {
   display: inline-block;
   padding-left: 16px;
-  background: url(/images/page_debut.svg) -6px no-repeat;
+  background: url(/images/page_debut.2.svg) -6px no-repeat;
   margin-right: 20px;
 }
 
 .pagination-forum .precedent a.precedent-lien {
   display: inline-block;
   padding-left: 16px;
-  background: url(/images/page_prec.svg) -8px no-repeat;
+  background: url(/images/page_prec.2.svg) -8px no-repeat;
 }
 
 .pagination-forum .page {
@@ -55,7 +55,7 @@
 .pagination-forum .suivant a {
   display: inline-block;
   padding-right: 16px;
-  background: url(/images/page_suiv.svg) right -8px center no-repeat;
+  background: url(/images/page_suiv.2.svg) right -8px center no-repeat;
 }
 
 /* Topic list */
@@ -128,7 +128,7 @@
   background-image: url('/images/topic-list-icons/dossier2.2.svg');
 }
 .topic__label--lock {
-  background-image: url('/images/topic-list-icons/lock.2.svg');
+  background-image: url('/images/topic-list-icons/lock.3.svg');
 }
 .topic__label--marque-on {
   background-image: url('/images/topic-list-icons/marque-on.2.svg');
