--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -37,12 +37,12 @@
   display: table-cell;
   text-transform: none;
   background: hsl(214, 27%, 35%);
-  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08);
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,.3);
   white-space: nowrap;
 }
 
 .header__forum-link {
-  color: hsl(214, 27%, 75%);
+  color: hsl(214, 27%, 70%);
   padding: 10px 20px;
   display: inline-block;
 }
