--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -15,7 +15,7 @@ body {
   overflow-y: scroll;
   color: hsl(0, 0%, 87%);
   -webkit-text-size-adjust: 100%;
-  background: black;
+  background: hsl(0, 0%, 13%);
   height: 100%;
 }
 
@@ -25,7 +25,7 @@ body {
 
 @media (min-width: 1025px) {
   body {
-    background: hsl(250,4%,10%);
+    background: hsl(0,0%,7%);
   }
 }
 
