--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -57,7 +57,7 @@
 /* SHEET */
 
 .sheet {
-  background: black;
+  background: hsl(0, 0%, 13%);
   padding: 5px 0 10px;
   position: relative;
   overflow: hidden;
