--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -40,7 +40,7 @@
 }
 
 .form__draft-recover {
-  color: #2196f3;
+  color: hsl(166, 100%, 70%);
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   -webkit-transition: color .1s ease-out;
@@ -48,10 +48,6 @@
   display: inline-block;
   margin: -8px;
   padding: 8px;
-}
-
-.form__draft-recover:hover {
-  color: #64b5f6;
 }
 
 .form__error {
@@ -85,8 +81,7 @@
   -webkit-appearance: none;
   font: 14px/1.4 -apple-system, sans-serif;
   width: 100%;
-  border: 2px solid;
-  border-color: hsl(255, 100%, 55%) hsl(255, 100%, 62%) hsl(255, 100%, 65%);
+  border: 1px solid hsl(255, 100%, 60%);
   padding: 4px 6px;
   outline: none;
   border-radius: 4px;
