--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -87,6 +87,7 @@
   border-radius: 4px;
   background: hsl(0, 0%, 7%);
   color: hsl(0, 0%, 87%);
+  box-shadow: inset 0 1px 2px black, inset 0 -1px 1px rgba(255,255,255,.15);
 }
 
 .form__topic {
