--- a/public/styles/topic-message.css
+++ b/public/styles/topic-message.css
@@ -221,7 +221,7 @@
   color: #D50000;
 }
 
-/* Actions */
+/* Date */
 
 .message__byline-date {
   display: table-cell;
@@ -382,7 +382,6 @@
   background: hsl(0, 0%, 20%);
   background-position: center 5px;
   background-repeat: no-repeat;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
   cursor: pointer;
   -webkit-transition: -webkit-transform .075s ease-out;
           transition: transform .075s ease-out, -webkit-transform .075s ease-out;
