--- a/public/styles/topic-message.css
+++ b/public/styles/topic-message.css
@@ -708,9 +708,14 @@
   min-height: 16px;
   position: relative;
   top: 1px;
-  -ms-interpolation-mode: nearest-neighbor;
-  -webkit-image-rendering: crisp-edges;
-  image-rendering: pixelated;
+}
+
+@media (-webkit-min-device-pixel-ratio: 2) {
+  .smiley {
+    -ms-interpolation-mode: nearest-neighbor;
+    -webkit-image-rendering: crisp-edges;
+    image-rendering: pixelated;
+  }
 }
 
 .smiley--17 { min-height: 12px; } /* :gba: */
