--- a/public/styles/topic.css
+++ b/public/styles/topic.css
@@ -128,3 +128,29 @@
     display: none;
   }
 }
+
+/* Poll */
+
+.topic-poll-notice {
+  margin: 0 10px 10px;
+  color: hsl(0, 0%, 60%);
+}
+
+@media (min-width: 400px) {
+  .topic-poll-notice {
+    margin-bottom: 11px;
+  }
+}
+
+@media (min-width: 600px) {
+  .topic-poll-notice {
+    margin-bottom: 13px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .topic-poll-notice {
+    margin-left: 200px;
+    margin-bottom: 14px;
+  }
+}
