--- a/public/styles/topic-message.css
+++ b/public/styles/topic-message.css
@@ -591,9 +591,9 @@
 .message__content-text > .pre-jv, .message__content-text p > .code-jv {
   font-size: 95%;
   font-family: Menlo, Consolas, monospace;
-  border: 1px solid rgba(0,0,0,.25);
+  border: 1px solid hsla(0, 0%, 0%, .55);
   border-radius: 2px;
-  background: rgba(230,230,235,.5);
+  background: hsla(0, 0%, 100%, .2);
 }
 
 .pre-jv {
